@@ -81,6 +81,9 @@ main (int argc, char *argv[])
 		++i;
 	}
 
+	g_set_application_name (_("Typing Monitor"));
+	gtk_window_set_default_icon_name ("typing-monitor");
+
 	gnome_program_init (PACKAGE, VERSION, LIBGNOMEUI_MODULE, 
 			    argc, argv, NULL);
 
