@@ -1,3 +1,13 @@
+2007-01-09  Vincent Untz <vuntz@gnome.org>
+
+	* main.c: (main): set default window icon and application name
+	* Makefile.am: install icons
+	* drwright.c: (popup_about_cb): use gtk_about_dialog_show()
+	* typing-monitor.png:
+	* typing-monitor.svn: new
+	Fix bug #348641, icon by Andreas Nilsson <nisses.mail@home.se>, patch
+	by Luca Cavalli <luca.cavalli@gmail.com>
+
 2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Don't redefine GNOMELOCALEDIR.
